--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Wed May 28 18:04:33 IST 2014
+#Tue Jun 03 04:40:25 IST 2014
 eclipse.preferences.version=1
-include_path=0;/final
+include_path=0;/logsIntegrate
